Fixed functionality with Maven and Vscode